...
                        .offset(offset)
                        .position(transform.origin.toCGPoint())
                        .zIndex(10)
                }
            }
        }
        .accessibilityIdentifier("gameArea")
        .frame(width: gameState.width, height: gameState.height)
        .contentShape(Rectangle())
        .clipped()
        .onTapGesture {
            trySetAimPoint($0)
        }
...
                Button {
                    guard gameState.canShoot else {
                        return
                    }
                    gameState.shoot()
                } label: {
                    Text("Fire").font(.largeTitle)
                }
                .buttonStyle(.borderedProminent)
                .controlSize(.extraLarge)
                .tint(.orange)
                .disabled(!gameState.canShoot || gameState.aimPoint == nil)
            }
...
